# bedrock-switchboard

./: .gitignore  README.md  bedrock-switchboard.code-workspace  justfile  pyproject.toml
.trunk/: trunk.yaml
src/bedrock_switchboard/: __init__.py  client.py
tests/: conftest.py  test_basic.py
