[project]
name = "bedrock-switchboard"
version = "0.1.0"
description = "Nicer Python client for AWS Bedrock"
readme = "README.md"
authors = [{ name = "Abizer Lokhandwala", email = "abizer@abizer.me" }]
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
