[project]
name = "bedrock-switchboard"
version = "0.1.0"
description = "Nicer Python client for AWS Bedrock"
readme = "README.md"
authors = [{ name = "Abizer Lokhandwala", email = "abizer@abizer.me" }]
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  "pytest>=8.4.1",
  "pytest-asyncio>=1.0.0",
  "pytest-cov>=6.2.1",
  "pytest-rich>=0.2.0",
  "pytest-xdist>=3.8.0",
  "rich>=14.0.0",
  "ruff>=0.12.3",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
addopts = "-s -v --import-mode=importlib --cov=src/bedrock_switchboard --cov-report=term-missing:skip-covered"
